# autonomous-ai-interviewer

./: .gitignore  PRD.md  PROJECT_SUMMARY.txt  README.md  TDR.md  main.py  pyproject.toml  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: README.md  __init__.py  data.db  main.py
backend/core/: __init__.py  config.py  utils.py
backend/database/: __init__.py  db.py  models.py
backend/round1/: __init__.py  ats_evaluator.py  resume_parser.py  routes.py  service.py
backend/round1/prompts/: llm_prompt.txt
backend/round2/: __init__.py  aptitude_engine.py  code_runner.py  dsa_engine.py  interview_ai.py  interviewer.py  routes.py  scoring.py  service.py  websocket.py  ws_manager.py
backend/round3/: __init__.py  routes.py  scenario_engine.py  service.py
backend/round3/prompts/: llm_prompt.txt
backend/utils/: helpers.py
frontend/: index.html
