[project]
name = "microsoft-agent-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "autogen>=0.10.5",
    "chromadb>=1.4.1",
    "crewai>=0.193.2",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langgraph>=1.0.7",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pandas>=2.0.0,<3.1.0",
    "protobuf>=4.21.0,<6.0.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "rich>=13.0.0,<15.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.35.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
    "vega-datasets>=0.9.0",
    "websocket-client>=1.9.0",
]
